--- a/Crossborderpayments.html
+++ b/Crossborderpayments.html
@@ -197,7 +197,7 @@
                         <div class="card my-4">
                             <h5 class="card-header">Side Widget</h5>
                             <div class="card-body">
-                                FinLogic offers expert guidance in Banking and Foreign Exchange to help businesses
+                                FinLogic offers expert guidance in Cross Border Payments to help businesses
                                 optimize their financial operations.
                             </div>
                         </div>
