--- a/Cardissuanceprogrammes.html
+++ b/Cardissuanceprogrammes.html
@@ -144,10 +144,10 @@
                             multiple cards and IBAN Accounts per user.</p>
 
                         <blockquote class="blockquote">
-                            <p class="mb-0">With our cross-border payment solutions, we simplify the complexities of
-                                international business. Whether you're expanding into new markets or managing global
-                                transactions, FinLogic ensures your payments are seamless, secure, and efficient. Let us
-                                help you connect with the world, one transaction at a time. 🌐💳</p>
+                            <p class="mb-0">Unlock new possibilities with our tailored card issuance programs. Whether
+                                for employee benefits, customer rewards, or payment solutions, FinLogic helps you create
+                                seamless, branded card experiences that drive loyalty and enhance your brand. Let’s
+                                transform the way your business connects with its customers. 💳🚀</p>
                             <footer class="blockquote-footer">Card
                                 <cite title="Source Title"> Issuance Programmes</cite>
                             </footer>
